[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/systems/world_system.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/systems/combat_system.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/systems/net_system.gd" type="Script" id=4]
[ext_resource path="res://scripts/systems/input_system.gd" type="Script" id=6]
[ext_resource path="res://scripts/systems/player_system.gd" type="Script" id=7]

[node name="Main" type="Node"]

[node name="WorldSystem" parent="." instance=ExtResource( 1 )]

[node name="NetSystem" type="Node" parent="."]
script = ExtResource( 4 )

[node name="CombatSystem" parent="." instance=ExtResource( 2 )]

[node name="InputSystem" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PlayerSystem" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="cleared_path" from="InputSystem" to="PlayerSystem" method="_on_InputSystem_cleared_path"]
[connection signal="cleared_target" from="InputSystem" to="PlayerSystem" method="_on_InputSystem_cleared_target"]
[connection signal="selected_path" from="InputSystem" to="PlayerSystem" method="_on_InputSystem_selected_path"]
[connection signal="selected_target" from="InputSystem" to="PlayerSystem" method="_on_InputSystem_selected_target"]
